# vanity-rs

./: Cargo.toml
src/: main.rs
