[package]
name = "vanity-rs"
version = "1.0.0"
edition = "2021"
authors = ["Sorawit Suriyakarn", "Nipun Pitimanaaree"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
ethers = "0.17.0"
rayon = "1.5.3"
